# reiter

./: .gitmodules  README.md  build.sh  build_sattel.sh  bun.lockb  index.html  package.json  postcss.config.ts  prettier.config.js  run.sh  tailwind.config.ts  tsconfig.json  tsconfig.node.json  update_sattel.sh  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  CrawlerView.tsx  DefaultView.tsx  Main.tsx  Popup.tsx  ProgressBars.tsx  RunSattel.tsx  Sattel.tsx  SattelManager.tsx  Sidebar.tsx  SyncButton.tsx  Theme.tsx  app.tsx  logger.tsx  main.tsx  sattel.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/sattel/: config.rs  mod.rs
src/buttons/: AddCrawlerButton.tsx  SettingsButton.tsx  SyncButton.tsx
src/components/: Bar.tsx  DropdownSelect.tsx  Popup.tsx  ProgressBars.tsx  Sattel.tsx  Sidebar.tsx
src/components/views/: CrawlerView.tsx  DefaultView.tsx  EditCrawlerView.tsx  ProgressView.tsx  SettingsView.tsx
src/dialogs/: AddCrawlerDialog.tsx  ConfirmDeleteDialog.tsx  PasswordDialog.tsx  UsernameDialog.tsx
src/forms/: AddCrawlerForm.tsx  EditCrawlerForm.tsx  EditCrawlerform.tsx  PasswordForm.tsx  SettingsForm.tsx  UsernameForm.tsx
