[package]
name = "reiter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "reiter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [] }
tauri-plugin-shell = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
configparser = { version = "3.1.0", features = ["indexmap", "tokio"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
notify = { version = "6.1.1", default-features = false }
shellexpand = "3.1.0"
log = "0.4.22"
env_logger = "0.11.5"
